# uav-ugv-cooperative-system-sim-to-real

./: # 🚁 Real-World UAV Control & Mission Package.md  Car's actual motion code.md  LICENSE  README.md  demo-details.md  set_point(1).py  小车.py  小车代码最终版.py  无人机比赛仿真平台使用说明书.docx
Drone Field Flight Code/: 1.py
Drone Field Flight Code/drone_ctrl_pkg/: CMakeLists.txt  package.xml
Drone Field Flight Code/drone_ctrl_pkg/scripts/: box_detect.py  pose_ctrl.py  pose_pub.py  red_ballon_detect_node.py
Drone Field Flight Code/drone_ctrl_pkg/src/: box_node.cpp  keyboard_ctrl_node.cpp  keyboard_input_node.cpp  keyboard_pose_pub_node.cpp  land_node.cpp  move_forward_node.cpp  move_node.cpp  pose_ctrl_node.cpp  pose_ctrl_node2.cpp  pose_ctrl_node2.cpp.cpp  red_ballon_node.cpp  set_point_node.cpp  set_vel_node.cpp  simple.cpp  takeoff_node.cpp  test2.cpp  test_node.cpp  vel_ctrl_node.cpp
demo/: Build_src.sh  DroneSITL.bat  EnvSet.py  Untitled-6.py  WinWSL.bat  balloon_detect.py  bz.py  main.py  nm.py  offboard.bat  offboard.py  run_demo.sh  shutdown.bat  sj.py  ~$机比赛仿真平台使用说明书.docx
demo/src/: jb.py
demo/src/src/sensor_pkg/: Config.json  main.py
demo/src/src/sh/: demo.sh
